fix: redis cache serialization for productsResponse